Updated some images to SVG/PNG of higher quality. Set default of hidden visibility and autoAlpha: 0 to prevent images seen before animation starts.

--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,7 @@ body {
 #mainLogo {
   width: 24%;
   position: absolute;
+  visibility: hidden;
 }
 
 #thoughts {
@@ -101,6 +102,7 @@ body {
   position: absolute;
   left: 315px;
   top: 15px;
+  visibility: hidden;
 }
 
 #bubbles {
@@ -108,6 +110,7 @@ body {
   width: 50%;
   left: 315px;
   top: 40px;
+  visibility: hidden;
 }
 
 #graphs {
@@ -115,6 +118,7 @@ body {
   position: absolute;
   top: 165px;
   left: 315px;
+  visibility: hidden;
 }
 
 #events {
@@ -122,6 +126,7 @@ body {
   position: absolute;
   left: 315px;
   top: 395px;
+  visibility: hidden;
 }
 
 #eventsChart {
@@ -130,6 +135,7 @@ body {
   position: absolute;
   left: 315px;
   top: 415px;
+  visibility: hidden;
 }
 
 #gestures {
@@ -137,6 +143,7 @@ body {
   position: absolute;
   left: 315px;
   top: 475px;
+  visibility: hidden;
 }
 
 #gesturesImg {
@@ -144,12 +151,14 @@ body {
   position: absolute;
   left: 315px;
   top: 500px;
+  visibility: hidden;
 }
 
 #insights {
   width: 24%;
   position: absolute;
   right: 0px;
+  visibility: hidden;
 }
 
 /*----- FOOTER -----*/
